objects/college__c.object
<CustomObject>
    <fields>
        <fullName>college_email__c</fullName>
        <label>college_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>college_mobile__c</fullName>
        <label>college_mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>course__c</fullName>
        <label>course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>EEE</fullName>
                </value>
                <value>
                    <fullName>MEC</fullName>
                </value>
                <value>
                    <fullName>CIV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>college</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>college Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>